# Study_Assistant

./: LICENSE  README.md  app.py  pyproject.toml
Test/: test.py
src/: config.py  generator.py  ingest.py  retriever.py
vector_db/2cb627ce-d153-471c-90d9-be4fb48a921e/: index_metadata.pickle
